# resume_bazan

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
resume_core/: conftest.py  manage.py
resume_core/dashboards/: admin.py  apps.py  urls.py
resume_core/dashboards/migrations/: 0001_initial.py
resume_core/dashboards/models/: dashboard.py
resume_core/dashboards/serializers/: dashboard.py
resume_core/dashboards/views/: dashboard.py
resume_core/general/tests/fixtures/: misc.py
resume_core/general/utils/: cus_cryptography.py
resume_core/project/: asgi.py  urls.py
resume_core/project/settings/: __init__.py  base.py  cus_logging.py  docker.py  envvars.py  rest_framework.py
resume_core/project/settings/templates/: settings.dev.py
scripts/: entrypoint.sh  production_data.py
