[tool.poetry]
name = "resume-template"
version = "0.1.0"
description = ""
authors = ["bazan <brayan@brayanbazan.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "resume_core"}]

[tool.poetry.dependencies]
boto3 = "^1.35.72"
channels = {extras = ["daphne"], version = "^4.2.0"}
django = "^5.1.3"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
django-model-utils = "^5.0.0"
django-split-settings = "^1.3.2"
django-storages = "^1.14.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^11.0.0"
psycopg2 = "^2.9.10"
pynacl = "^1.5.0"
python = "^3.10"
pyyaml = "^6.0.2"
whitenoise = "^6.8.2"
pydantic = "^2.10.2"


[tool.poetry.group.dev.dependencies]
colorlog = "^6.9.0"
django-debug-toolbar = "^4.4.6"
model-bakery = "^1.20.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-xdist = "^3.6.1"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
